src/credo/static/credo/styles.css
.main {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.body {
  flex-grow: 1;
}

.centeredSpinner {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}

svg.tooltipped {
    opacity: 0.5;
    transition: opacity 0.1s ease-in-out;
}

svg.tooltipped:hover {
    opacity: 1;
}

.btn {
    letter-spacing: normal;
}

#saveButton {
  float: right;
}

#toolbar {
    overflow: auto;
}

#makeRevisionButton {
    float: right;
}

#makeRevisionSpan {
  float: right;
}

.splash-image {
    text-align: center;
    width: 700px;
    margin: 50px auto;
}

.logo-icon {
    margin-left: 15px;
}

.breadcrumb-container {
  margin-left: 10px;
}

.breadcrumb-vspace {
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

#renderDiv {
    margin-top: 20px;
    padding: 20px;
    box-shadow: 3px 3px 5px 5px rgba(0, 0, 0, 0.1);
    margin-bottom: 50px;
}

.loading {
    box-shadow: none !important;
}

